--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Edit.cshtml
@@ -58,6 +58,9 @@
                             <!-- Campo oculto para data de nascimento-->
                             <input type="hidden" asp-for="UsuarioModel.DataNascimento" />
 
+                            <!-- Campo oculto para data de nascimento-->
+                            <input type="hidden" asp-for="Email"/>
+
                             <div class="row col-md-2 mt-3">
                                 <label asp-for="OrganizacaoModel.Id" class="control-label select-label">Organização</label>
                             </div>
