--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Pages/Account/Login.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Pages/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Login";
     Layout = "_Layout";
 }
-
+<!--TODO: por pontuação automatica no CPF-->
 <p class="login-box-msg">Login do Sistema</p>
 
 @if (ModelState.ErrorCount > 0)
