--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Pages/Account/Register.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Criar Conta";
     Layout = "_Layout";
 }
-
+<!--TODO: Ajeitar os avisos de erro-->
 <section class="content">
     <div class="container-fluid">
         <div class="row">
