--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Details.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Usuario/Details.cshtml
@@ -12,30 +12,58 @@
                     <div class="card-header">
                         <h2 class="card-title">Detalhes do Usuário</h2>
                     </div>
+
                     <div class="card-body">
-                        <dl class="row">
-                            <dt class="col-sm-2">@Html.DisplayNameFor(model => model.UsuarioModel.Nome)</dt>
-                            <dd class="col-sm-10">@Html.DisplayFor(model => model.UsuarioModel.Nome)</dd>
+                        <div class="col-md-10">
+                            <dl class="dl-horizontal">
 
-                            <dt class="col-sm-2">Email</dt>
-                            <dd class="col-sm-10">@Model.Email</dd>
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.UsuarioModel.Nome)
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.UsuarioModel.Nome)</p>
+                                </dd>
 
-                            <dt class="col-sm-2">@Html.DisplayNameFor(model => model.UsuarioModel.Cpf)</dt>
-                            <dd class="col-sm-10">@Html.DisplayFor(model => model.UsuarioModel.Cpf, "Cpf")</dd>
+                                <dt>
+                                    Email
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Model.Email</p>
+                                </dd>
 
-                            <dt class="col-sm-2">@Html.DisplayNameFor(model => model.UsuarioModel.DataNascimento)</dt>
-                            <dd class="col-sm-10">@Html.DisplayFor(model => model.UsuarioModel.DataNascimento)</dd>
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.UsuarioModel.Cpf)
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.UsuarioModel.Cpf, "Cpf")</p>
+                                </dd>
 
-                            <dt class="col-sm-2">@Html.DisplayNameFor(model => model.TipoUsuarioModel.Descricao)</dt>
-                            <dd class="col-sm-10">@Html.DisplayFor(model => model.TipoUsuarioModel.Descricao)</dd>
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.UsuarioModel.DataNascimento)
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.UsuarioModel.DataNascimento)</p>
+                                </dd>
 
-                            <dt class="col-sm-2">Organização</dt>
-                            <dd class="col-sm-10">@Html.DisplayFor(model => model.OrganizacaoModel.RazaoSocial)</dd>
-                        </dl>
+                                <dt>
+                                    @Html.DisplayNameFor(model => model.TipoUsuarioModel.Descricao)
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.TipoUsuarioModel.Descricao)</p>
+                                </dd>
+
+                                <dt>
+                                    Organização
+                                </dt>
+                                <dd>
+                                    <p class="form-control">@Html.DisplayFor(model => model.OrganizacaoModel.RazaoSocial)</p>
+                                </dd>
+                            </dl>
+                        </div>
                     </div>
                     <div class="card-footer">
-                        <a asp-action="Edit" asp-route-id="@Model.UsuarioModel.Id" class="btn btn-primary">Editar</a> |
-                        <a asp-action="Index" class="btn btn-secondary">Voltar</a>
+                        <a asp-action="Edit" asp-route-id="@Model.UsuarioModel.Id" class="btn btn-info">Editar</a> |
+                        <a asp-action="Index" class="btn btn-primary">Voltar</a>
                     </div>
                 </div>
             </div>
